issue3.css
/* set default font and font color */
* {
    font-family: monospace;
    color: black;
    font-size: 14px;
}

/* make sure html/body takes up full height of browser */
html, body {
   height: 100%;
   margin: 0px;
   padding: 0px;
}

/* set common attributes for sidebar and pages */
#pages {
   display: inline-block;
   margin: 0px;
   padding: 0px;
   position: absolute;
}

/* set sidebar attributes */
#menu {
   position: absolute;
   top: 50%;
   margin-top: -60px;
   left: 10px;
   padding: 5px;
   border: 2px dotted rgb(200, 150, 150);
}

#menu * {
   display: block;
   padding: 3px;
}

/* set attributes for pages */
#pages {
   top: 50%;
   margin-top: -320px;
   margin-left: 110px;
   overflow-x: scroll;
   white-space: nowrap;
}

#pages * {
   display: inline-block;
}

.page {
   height: 600px;
   -webkit-transition: all 1s;
   transition: all 1s;
}

.outlined {
   border: 1px solid black;
}

.caption {
   text-align: center;
}

